--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>assignment-18</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1 class="heading">Street Food</h1>
