--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="heading">Street Food</h1>
+    <div class="heading">
+    <h1> <img src="./icons/chai.jpg" alt="" height="40px" width="40px">
+                         <img src="./icons/pizza (1).png" alt="" height="40px" width="40px">
+                         <img src="./icons/roll.jpg" alt="" height="40px" width="40px">
+                         <img src="./icons/hotdog-burger.png" alt="" height="40px" width="40px">
+                         <img src="./icons/nuggets.png" alt="" height="40px" width="40px">
+                         <img src="./icons/rice.png" alt="" height="40px" width="40px">
+                         <u>Street Food</u>
+                        <img src="./icons/samosa.png" alt="" height="45px" width="45px">
+                        <img src="./icons/burger.png" alt="" height="40px" width="40px">
+                        <img src="./icons/chicken-leg.png" alt="" height="40px" width="40px">
+                        <img src="./icons/french-fries.png" alt="" height="40px" width="40px">
+                        <img src="./icons/ramen.png" alt="" height="40px" width="40px">
+                        <img src="./icons/street-food.png" alt="" height="40px" width="40px">
+                        </h1>
+   </div><hr><hr>
+   <p class="samosa">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn">Samosa</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn">Chai</button></p>
+   <img src="./images/samosa-1.jpg" alt="" width="500px" style="margin: 10px 300px 10px 100px;">
+   <img src="./images/tea.jpg" alt="" width="500px" height="auto">
 </body>
 </html>
