background color added

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="heading">
-    <h1> <img src="./icons/chai.jpg" alt="" height="40px" width="40px">
+    <h1>                 <img src="./icons/coffee-cup.png" alt="" height="50px" width="40px">
                          <img src="./icons/pizza (1).png" alt="" height="40px" width="40px">
-                         <img src="./icons/roll.jpg" alt="" height="40px" width="40px">
+                         <img src="./icons/sushi.png" alt="" height="40px" width="40px">
                          <img src="./icons/hotdog-burger.png" alt="" height="40px" width="40px">
                          <img src="./icons/nuggets.png" alt="" height="40px" width="40px">
                          <img src="./icons/rice.png" alt="" height="40px" width="40px">
